@@ -10,6 +10,11 @@
 	* tree.c (lvalue_p_1) <case CONST_DECL>: Return clk_none if
 	not TREE_STATIC.
 
+2009-08-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* method.c (use_thunk): Call free_after_compilation after
+	assemble_end_function.
+
 2009-08-05  Jason Merrill  <jason@redhat.com>
 
 	PR c++/40948
